syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AvatarExpeditionState.proto";


message AvatarExpeditionInfo {
	float shorted_ratio = 5;
	uint32 hour_time = 3;
	uint32 exp_id = 2;
	uint32 start_time = 4;
	AvatarExpeditionState state = 1;
}