syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AvatarSatiationData {
	float penalty_finish_time = 8;
	float finish_time = 2;
	uint64 avatar_guid = 10;
}