syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message QuestProgressUpdateNotify {
	uint32 quest_id = 9;
	repeated uint32 fail_progress_list = 12;
	repeated uint32 finish_progress_list = 6;
}